// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps[Base] should render correctly  1`] = `
<div
  style="width: 500px;"
>
  <div
    class="soui-steps soui-steps-steps soui-steps-default soui-steps-horizontal"
  >
    <div
      class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-finish"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Succeeded
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-process soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-process"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            2
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Processing
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-wait soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-wait"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            3
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Pending
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps[Base] should render correctly about description 1`] = `
<div
  style="width: 500px;"
>
  <div
    class="soui-steps soui-steps-steps soui-steps-default soui-steps-horizontal"
  >
    <div
      class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label soui-steps-width-description"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-finish"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Succeeded
          </div>
          <div
            class="soui-steps-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-process soui-steps-vertical-label soui-steps-width-description"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-process"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            2
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Processing
          </div>
          <div
            class="soui-steps-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-wait soui-steps-vertical-label soui-steps-width-description"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-wait"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            3
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Pending
          </div>
          <div
            class="soui-steps-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps[Base] should render correctly about direction 1`] = `
<div
  style="width: 100%; overflow: auto;"
>
  <div
    style="width: 500px; display: flex; gap: 32px; margin-bottom: 24px; align-items: flex-start;"
  >
    <div
      class="soui-steps soui-steps-steps soui-steps-default soui-steps-vertical"
    >
      <div
        class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-horizontal-label"
        dir="ltr"
      >
        <div
          class="soui-steps-default"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-finish"
          >
            <span
              class="soui-steps-icon-wrapper"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Succeeded
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-process soui-steps-horizontal-label"
        dir="ltr"
      >
        <div
          class="soui-steps-default"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-process"
          >
            <span
              class="soui-steps-icon-wrapper"
            >
              2
            </span>
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Processing
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-wait soui-steps-horizontal-label"
        dir="ltr"
      >
        <div
          class="soui-steps-default"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-wait"
          >
            <span
              class="soui-steps-icon-wrapper"
            >
              3
            </span>
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Pending
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps soui-steps-steps soui-steps-default soui-steps-vertical"
    >
      <div
        class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-horizontal-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-default"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-finish"
          >
            <span
              class="soui-steps-icon-wrapper"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Succeeded
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-process soui-steps-horizontal-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-default"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-process"
          >
            <span
              class="soui-steps-icon-wrapper"
            >
              2
            </span>
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Processing
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-wait soui-steps-horizontal-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-default"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-wait"
          >
            <span
              class="soui-steps-icon-wrapper"
            >
              3
            </span>
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Pending
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="width: 500px; display: flex; gap: 32px; align-items: flex-start;"
  >
    <div
      class="soui-steps soui-steps-steps soui-steps-dot soui-steps-vertical"
    >
      <div
        class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-horizontal-label"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-finish"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Succeeded
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-process soui-steps-horizontal-label"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-process"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Processing
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-wait soui-steps-horizontal-label"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-wait"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Pending
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps soui-steps-steps soui-steps-dot soui-steps-vertical"
    >
      <div
        class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-horizontal-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-finish"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Succeeded
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-process soui-steps-horizontal-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-process"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Processing
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-wait soui-steps-horizontal-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-wait"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Pending
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps[Base] should render correctly about icon 1`] = `
<div
  style="width: 100%; overflow: auto;"
>
  <div
    class="soui-steps soui-steps-steps soui-steps-default soui-steps-horizontal"
  >
    <div
      class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-finish"
          dir="ltr"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <span
              style="display: inline-block; width: 100%; height: 100%; background: rgb(0, 168, 95); overflow: hidden; border-radius: 50%;"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.52841 8.7146L5.29871 12.4849C5.82008 13.0063 6.66484 13.0063 7.18621 12.4849L15.1991 4.47195C15.4594 4.21174 15.4594 3.78936 15.1991 3.52915C14.9389 3.26893 14.5166 3.26893 14.2563 3.52915L6.71481 11.0707C6.45412 11.3314 6.0308 11.3314 5.77011 11.0707L2.47122 7.77179C2.21101 7.51157 1.78863 7.51157 1.52841 7.77179C1.2682 8.032 1.2682 8.45438 1.52841 8.7146Z"
                  fill="white"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Step1
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-process soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-process"
          dir="ltr"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <span
              style="display: inline-block; width: 100%; height: 100%; background: rgb(245, 108, 10); overflow: hidden; border-radius: 50%;"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 16 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M8.65559 0.45659C8.86677 0.575887 9.04141 0.750529 9.16071 0.961714L15.2144 11.6782C15.5766 12.3194 15.3504 13.1328 14.7093 13.4949C14.5092 13.608 14.2833 13.6674 14.0535 13.6674H1.94613C1.20975 13.6674 0.612793 13.0704 0.612793 12.334C0.612793 12.1042 0.672187 11.8783 0.785214 11.6782L6.83888 0.961714C7.20107 0.32056 8.01443 0.0944081 8.65559 0.45659ZM7.46312 2.7088L7.42188 2.77486L2.77306 11.275C2.71942 11.3731 2.6913 11.4831 2.6913 11.5949C2.6913 11.9368 2.94866 12.2186 3.28022 12.2571L3.35797 12.2616H12.7684C12.8825 12.2616 12.9947 12.2323 13.0943 12.1765C13.3925 12.0094 13.5126 11.6472 13.3841 11.3391L13.3501 11.2691L8.58841 2.76894C8.52723 2.65971 8.43652 2.56992 8.32668 2.50985C8.02672 2.3458 7.65601 2.43639 7.46312 2.7088ZM7.99992 9.66736C8.3681 9.66736 8.66658 9.96584 8.66658 10.334C8.66658 10.7022 8.3681 11.0007 7.99992 11.0007C7.63173 11.0007 7.33325 10.7022 7.33325 10.334C7.33325 9.96584 7.63173 9.66736 7.99992 9.66736ZM7.99992 4.33403C8.3681 4.33403 8.66658 4.63251 8.66658 5.0007V8.33403C8.66658 8.70222 8.3681 9.0007 7.99992 9.0007C7.63173 9.0007 7.33325 8.70222 7.33325 8.33403V5.0007C7.33325 4.63251 7.63173 4.33403 7.99992 4.33403Z"
                  fill="white"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Step2
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-wait soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-wait"
          dir="ltr"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#clip0_6499_17063)"
              >
                <path
                  d="M9.89799 0.917389C9.98256 0.940064 10.0618 0.979175 10.1313 1.03249C10.2008 1.0858 10.259 1.15227 10.3028 1.22811C10.3466 1.30394 10.375 1.38765 10.3864 1.47446C10.3978 1.56128 10.392 1.64948 10.3693 1.73406C10.3466 1.81863 10.3075 1.8979 10.2542 1.96736C10.2009 2.03682 10.1344 2.09509 10.0586 2.13886C9.98277 2.18263 9.89906 2.21103 9.81225 2.22244C9.72544 2.23386 9.63723 2.22806 9.55266 2.20539C8.40639 1.89823 7.19477 1.93788 6.07104 2.31933C4.9473 2.70078 3.96192 3.4069 3.2395 4.34838C2.51709 5.28987 2.09008 6.42444 2.01249 7.60861C1.9349 8.79279 2.2102 9.97337 2.80359 11.0011C3.39698 12.0288 4.28179 12.8574 5.34614 13.3823C6.41049 13.9071 7.60657 14.1045 8.78312 13.9495C9.95968 13.7946 11.0639 13.2942 11.956 12.5117C12.8482 11.7292 13.4883 10.6997 13.7953 9.55339C13.818 9.46882 13.8571 9.38954 13.9104 9.32008C13.9637 9.25063 14.0302 9.19235 14.106 9.14859C14.1819 9.10482 14.2656 9.07642 14.3524 9.065C14.4392 9.05359 14.5274 9.05938 14.612 9.08206C14.6966 9.10473 14.7758 9.14384 14.8453 9.19715C14.9148 9.25047 14.973 9.31694 15.0168 9.39277C15.0606 9.46861 15.089 9.55232 15.1004 9.63913C15.1118 9.72594 15.106 9.81415 15.0833 9.89872C14.0353 13.8107 10.014 16.1321 6.10199 15.0841C2.18999 14.0361 -0.131343 10.0147 0.916657 6.10272C1.96466 2.19072 5.98599 -0.130611 9.89799 0.917389ZM13.2353 5.33406C13.4732 5.32824 13.7098 5.37006 13.9312 5.45708C14.1526 5.54409 14.3544 5.67454 14.5247 5.84072C14.5781 5.90148 14.618 5.97291 14.6416 6.05027C14.6653 6.12763 14.6722 6.20914 14.662 6.28939C14.604 6.54939 14.4387 6.77406 14.2007 6.90472C14.166 6.92206 12.3333 7.94006 10.3087 9.04806L9.94932 9.24406L9.58866 9.44139C8.58671 9.9894 7.58113 10.5307 6.57199 11.0654L6.55799 11.0721C6.35599 11.1587 6.13999 11.2174 5.92399 11.2461C5.66466 11.2747 5.47732 11.2821 5.25399 11.2967L4.97332 11.3114C4.91673 11.3261 4.85845 11.3333 4.79999 11.3327C4.70642 11.3366 4.61311 11.3205 4.52622 11.2855C4.43934 11.2506 4.36086 11.1976 4.29599 11.1301L2.87666 9.82806C2.79927 9.77227 2.73928 9.69568 2.70365 9.60719C2.66801 9.51869 2.65819 9.42191 2.67532 9.32806C2.69666 9.17672 2.76866 9.03872 2.87666 8.93072C2.98596 8.81726 3.1257 8.73778 3.27909 8.70183C3.43248 8.66588 3.59299 8.67498 3.74132 8.72806C3.89266 8.78606 4.06532 8.83672 4.25266 8.90139C4.63465 9.01238 5.00994 9.14527 5.37666 9.29939L6.55066 8.74939L4.22399 7.58472C4.15255 7.54798 4.09102 7.49456 4.0446 7.429C3.99818 7.36343 3.96824 7.28765 3.95732 7.20806C3.95271 7.13079 3.96905 7.0537 4.0046 6.98494C4.04015 6.91618 4.09361 6.8583 4.15932 6.81739C4.30332 6.69472 4.45466 6.57872 4.61999 6.47739C4.79999 6.28939 5.05266 6.19539 5.31199 6.22406C6.05332 6.31072 6.80266 6.41206 7.55199 6.50672C8.30132 6.60006 9.02866 6.69472 9.76332 6.78139L10.03 6.65139C10.426 6.46272 11.2547 6.07939 12.148 5.60206C12.4823 5.42305 12.8562 5.3309 13.2353 5.33406Z"
                  fill="#666C7C"
                />
              </g>
              <defs>
                <clippath
                  id="clip0_6499_17063"
                >
                  <rect
                    fill="white"
                    height="16"
                    transform="translate(0 0.000732422)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Step3
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-wait soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-wait"
          dir="ltr"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#clip0_6499_17063)"
              >
                <path
                  d="M9.89799 0.917389C9.98256 0.940064 10.0618 0.979175 10.1313 1.03249C10.2008 1.0858 10.259 1.15227 10.3028 1.22811C10.3466 1.30394 10.375 1.38765 10.3864 1.47446C10.3978 1.56128 10.392 1.64948 10.3693 1.73406C10.3466 1.81863 10.3075 1.8979 10.2542 1.96736C10.2009 2.03682 10.1344 2.09509 10.0586 2.13886C9.98277 2.18263 9.89906 2.21103 9.81225 2.22244C9.72544 2.23386 9.63723 2.22806 9.55266 2.20539C8.40639 1.89823 7.19477 1.93788 6.07104 2.31933C4.9473 2.70078 3.96192 3.4069 3.2395 4.34838C2.51709 5.28987 2.09008 6.42444 2.01249 7.60861C1.9349 8.79279 2.2102 9.97337 2.80359 11.0011C3.39698 12.0288 4.28179 12.8574 5.34614 13.3823C6.41049 13.9071 7.60657 14.1045 8.78312 13.9495C9.95968 13.7946 11.0639 13.2942 11.956 12.5117C12.8482 11.7292 13.4883 10.6997 13.7953 9.55339C13.818 9.46882 13.8571 9.38954 13.9104 9.32008C13.9637 9.25063 14.0302 9.19235 14.106 9.14859C14.1819 9.10482 14.2656 9.07642 14.3524 9.065C14.4392 9.05359 14.5274 9.05938 14.612 9.08206C14.6966 9.10473 14.7758 9.14384 14.8453 9.19715C14.9148 9.25047 14.973 9.31694 15.0168 9.39277C15.0606 9.46861 15.089 9.55232 15.1004 9.63913C15.1118 9.72594 15.106 9.81415 15.0833 9.89872C14.0353 13.8107 10.014 16.1321 6.10199 15.0841C2.18999 14.0361 -0.131343 10.0147 0.916657 6.10272C1.96466 2.19072 5.98599 -0.130611 9.89799 0.917389ZM13.2353 5.33406C13.4732 5.32824 13.7098 5.37006 13.9312 5.45708C14.1526 5.54409 14.3544 5.67454 14.5247 5.84072C14.5781 5.90148 14.618 5.97291 14.6416 6.05027C14.6653 6.12763 14.6722 6.20914 14.662 6.28939C14.604 6.54939 14.4387 6.77406 14.2007 6.90472C14.166 6.92206 12.3333 7.94006 10.3087 9.04806L9.94932 9.24406L9.58866 9.44139C8.58671 9.9894 7.58113 10.5307 6.57199 11.0654L6.55799 11.0721C6.35599 11.1587 6.13999 11.2174 5.92399 11.2461C5.66466 11.2747 5.47732 11.2821 5.25399 11.2967L4.97332 11.3114C4.91673 11.3261 4.85845 11.3333 4.79999 11.3327C4.70642 11.3366 4.61311 11.3205 4.52622 11.2855C4.43934 11.2506 4.36086 11.1976 4.29599 11.1301L2.87666 9.82806C2.79927 9.77227 2.73928 9.69568 2.70365 9.60719C2.66801 9.51869 2.65819 9.42191 2.67532 9.32806C2.69666 9.17672 2.76866 9.03872 2.87666 8.93072C2.98596 8.81726 3.1257 8.73778 3.27909 8.70183C3.43248 8.66588 3.59299 8.67498 3.74132 8.72806C3.89266 8.78606 4.06532 8.83672 4.25266 8.90139C4.63465 9.01238 5.00994 9.14527 5.37666 9.29939L6.55066 8.74939L4.22399 7.58472C4.15255 7.54798 4.09102 7.49456 4.0446 7.429C3.99818 7.36343 3.96824 7.28765 3.95732 7.20806C3.95271 7.13079 3.96905 7.0537 4.0046 6.98494C4.04015 6.91618 4.09361 6.8583 4.15932 6.81739C4.30332 6.69472 4.45466 6.57872 4.61999 6.47739C4.79999 6.28939 5.05266 6.19539 5.31199 6.22406C6.05332 6.31072 6.80266 6.41206 7.55199 6.50672C8.30132 6.60006 9.02866 6.69472 9.76332 6.78139L10.03 6.65139C10.426 6.46272 11.2547 6.07939 12.148 5.60206C12.4823 5.42305 12.8562 5.3309 13.2353 5.33406Z"
                  fill="#666C7C"
                />
              </g>
              <defs>
                <clippath
                  id="clip0_6499_17063"
                >
                  <rect
                    fill="white"
                    height="16"
                    transform="translate(0 0.000732422)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Step4
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps[Base] should render correctly about labelPlacement 1`] = `
<div
  style="width: 500px;"
>
  <div
    class="soui-steps soui-steps-steps soui-steps-default soui-steps-horizontal"
  >
    <div
      class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-horizontal-label soui-steps-width-description"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-icon soui-steps-finish"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Succeeded
          </div>
          <div
            class="soui-steps-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-process soui-steps-horizontal-label soui-steps-width-description"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-icon soui-steps-process"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            2
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Processing
          </div>
          <div
            class="soui-steps-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-wait soui-steps-horizontal-label soui-steps-width-description"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-icon soui-steps-wait"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            3
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Pending
          </div>
          <div
            class="soui-steps-description"
          >
            This is a description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps[Base] should render correctly about size 1`] = `
<div
  style="width: 500px;"
>
  <div
    class="soui-steps soui-steps-steps soui-steps-default soui-steps-small soui-steps-horizontal"
    style="margin-bottom: 32px;"
  >
    <div
      class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-finish"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Succeeded
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-process soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-process"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            2
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Processing
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-wait soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-wait"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            3
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Pending
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-steps soui-steps-steps soui-steps-default soui-steps-horizontal"
    style="margin-bottom: 32px;"
  >
    <div
      class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-finish"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Succeeded
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-process soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-process"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            2
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Processing
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-wait soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-wait"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            3
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Pending
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-steps soui-steps-steps soui-steps-default soui-steps-large soui-steps-horizontal"
  >
    <div
      class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-finish"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Succeeded
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-process soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-process"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            2
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Processing
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-wait soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-wait"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            3
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Pending
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps[Base] should render correctly about status 1`] = `
<div
  style="width: 500px;"
>
  <div
    class="soui-steps soui-steps-steps soui-steps-default soui-steps-horizontal"
  >
    <div
      class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-finish"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Succeeded
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-error soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-error"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 16 16"
            >
              <path
                d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Error
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps-step soui-steps-wait soui-steps-vertical-label"
      dir="ltr"
    >
      <div
        class="soui-steps-default"
      >
        <div
          class="soui-steps-tail"
          dir="ltr"
        >
           
        </div>
        <div
          class="soui-steps-icon soui-steps-wait"
        >
          <span
            class="soui-steps-icon-wrapper"
          >
            3
          </span>
        </div>
        <div
          class="soui-steps-content"
        >
          <div
            class="soui-steps-title"
            dir="ltr"
          >
            Pending
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps[Base] should render correctly about type 1`] = `
<div
  style="width: 100%; overflow: auto;"
>
  <div
    style="width: 500px;"
  >
    <div
      class="soui-steps soui-steps-steps soui-steps-dot soui-steps-horizontal"
      style="margin-bottom: 32px;"
    >
      <div
        class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-finish"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Succeeded
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-process soui-steps-vertical-label"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-process"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Complete information
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-wait soui-steps-vertical-label"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-wait"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Pending
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps soui-steps-steps soui-steps-dot soui-steps-horizontal"
      style="margin-bottom: 32px;"
    >
      <div
        class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-finish"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Succeeded
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-process soui-steps-vertical-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-process"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Complete information
            </div>
            <div
              class="soui-steps-description"
            >
              Please fill in your home address and phone number
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-wait soui-steps-vertical-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-dot"
        >
          <div
            class="soui-steps-tail"
            dir="ltr"
          >
             
          </div>
          <div
            class="soui-steps-icon soui-steps-wait"
            dir="ltr"
          >
            <span
              class="soui-steps-icon-wrapper"
            />
          </div>
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Pending
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="min-width: 700px;"
  >
    <div
      class="soui-steps soui-steps-steps soui-steps-arrow soui-steps-horizontal"
      style="margin-bottom: 32px;"
    >
      <div
        class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label"
        dir="ltr"
      >
        <div
          class="soui-steps-arrow"
          dir="ltr"
        >
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Succeeded
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-process soui-steps-vertical-label"
        dir="ltr"
      >
        <div
          class="soui-steps-arrow"
          dir="ltr"
        >
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Complete information
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-wait soui-steps-vertical-label"
        dir="ltr"
      >
        <div
          class="soui-steps-arrow"
          dir="ltr"
        >
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Pending
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-steps soui-steps-steps soui-steps-arrow soui-steps-horizontal"
    >
      <div
        class="soui-steps-step soui-steps-finish soui-steps-finish soui-steps-vertical-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-arrow"
          dir="ltr"
        >
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Succeeded
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-process soui-steps-vertical-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-arrow"
          dir="ltr"
        >
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Complete information
            </div>
            <div
              class="soui-steps-description"
            >
              Please fill in your home address and phone number
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-steps-step soui-steps-wait soui-steps-vertical-label soui-steps-width-description"
        dir="ltr"
      >
        <div
          class="soui-steps-arrow"
          dir="ltr"
        >
          <div
            class="soui-steps-content"
          >
            <div
              class="soui-steps-title"
              dir="ltr"
            >
              Pending
            </div>
            <div
              class="soui-steps-description"
            >
              This is a description
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
